Fix z-indexing

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -6,7 +6,7 @@
   text-align: center;
   padding-top: 3 * $spacing-unit;
   padding-bottom: $spacing-unit;
-  z-index: 1;
+  z-index: 10;
   background-color: $white;
 
   .logo {
