--- a/assets/index.scss
+++ b/assets/index.scss
@@ -116,7 +116,7 @@
         padding: 1em 0.83em;
         position: relative;
         width: 100%;
-        z-index: 100;
+        z-index: 2;
       }
       
       .tab-content {
